# chess-assembly

./: .gitignore  CMakeLists.txt  ProyectoFinalArqui.sln  ProyectoFinalOAC.sln  README.md  main.cpp  main.h  tableroLogica.cpp  tableroLogica.h
Chess/GUI/: MainWindow.cpp  MainWindow.h  Tablero.ui  TableroInterfaz.h
Chess/GUI/_ui/: recursos.qrc
Chess/Piezas/: Alfil.cpp  Alfil.h  Caballo.cpp  Caballo.h  Casilla.h  Peon.cpp  Peon.h  Pieza.cpp  Pieza.h  Reina.cpp  Reina.h  Rey.cpp  Rey.h  Torre.cpp  Torre.h
Chess/Src/: Juego.cpp  Juego.h  Movimiento.h  Tablero.cpp  Tablero.h  main.cpp
ProyectoFinalArqui/: MainWIndow.h  MainWindow.cpp  ProyectoFinalArqui.vcxproj  ProyectoFinalArqui.vcxproj.filters  main.cpp
ProyectoFinalOAC/: Alfil.cpp  Alfil.h  Caballo.cpp  Caballo.h  Casilla.cpp  Casilla.h  Juego.cpp  Juego.h  MainWindow.cpp  MainWindow.h  MenuWindow.cpp  MenuWindow.h  Peon.cpp  Pieza.cpp  Pieza.h  ProyectoFinalOAC.vcxproj  ProyectoFinalOAC.vcxproj.filters  Reina.cpp  Reina.h  Rey.cpp  Rey.h  Tablero.cpp  Tablero.h  Torre.cpp  Torre.h  main.cpp
